# OpenRPG-App

./: .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .prettierrc  .travis.yml  CHANGELOG.md  README.md  build.bat  build.sh  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js  webpack.main.config.js  webpack.renderer.config.js
src/: CMakeLists.txt  utils.cpp
src/character/: CMakeLists.txt
src/common/: globals.ts  log.ts  scripts.ts  settings.ts
src/common/services/: configService.ts  settingsService.ts  updateService.ts
src/common/types/: files.d.ts  import-image.d.ts  openrpg-libs.d.ts
src/main/: index.ts  main.ts
src/names/: CMakeLists.txt  names.cpp
src/renderer/: app.tsx  index.html
src/renderer/components/: appContainer.tsx  campaign.tsx  characterScreen.tsx  characters.tsx  cities.tsx  settings.tsx  sidebar.tsx  welcome.tsx  world-maps.tsx  worldMaps.tsx
src/renderer/components/characterScreen/: actionTable.tsx  characterSheet.tsx  labeledTextbox.tsx  savesPanel.tsx  scoreBar.tsx  skillsPanel.tsx
src/renderer/components/characters/: characterScreen.tsx  (+9 more)
src/renderer/css/: animate.min.css  characterSheet.css  section.css  sidebar.css  style.css
src/renderer/js/: imports.js  nav.js  scripts.js
src/renderer/scss/: _sections.scss  _variables.scss  app.scss  characterSheet.scss  main.scss  modal.scss  sidebar.scss  slider.scss  titlebar.scss  welcome.scss
src/renderer/ts/: scripts.ts
src/roll/: CMakeLists.txt  roll-parser.cpp
src/sections/: campaign.html  characters.html  welcome.html  world-maps.html
(+51 files in other folders)
